--- a/public/index.html
+++ b/public/index.html
@@ -1,20 +1,47 @@
-<!-- public/index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="SaaS E-Learning Platform for Students and Instructors. Join thousands of learners online.">
-  <meta name="keywords" content="E-Learning, Online Courses, SaaS, React, Bootstrap">
+
+  <title>SDG 4 E-Learning Platform – Quality Education for All</title>
+  <meta name="description" content="Interactive e-learning platform designed to support Sustainable Development Goal 4 (Quality Education): inclusive, equitable, and lifelong learning for all." />
+  <meta name="keywords" content="E-Learning, Online Courses, SaaS, React, Bootstrap, SDG4, Quality Education">
   <meta name="author" content="Ojobor Jude Ikechukwu">
-  <title>SaaS E-Learning Platform</title>
-  
+
+  <!-- Open Graph for social sharing -->
+  <meta property="og:title" content="SDG 4 E-Learning Platform" />
+  <meta property="og:description" content="Interactive platform supporting UN Sustainable Development Goal 4: Quality Education for all learners, everywhere." />
+  <meta property="og:image" content="https://sdg4-elearning.vercel.app/assets/images/dhc_official_logo.jpg" />
+  <meta property="og:url" content="https://sdg4-elearning.vercel.app" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+
+  <!-- JSON-LD Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "SDG 4 E-Learning Platform",
+    "url": "https://sdg4-elearning.vercel.app",
+    "description": "E-Learning platform designed around Sustainable Development Goal 4: ensuring inclusive and equitable quality education for all and promoting lifelong learning opportunities.",
+    "educationalAlignment": {
+      "@type": "AlignmentObject",
+      "alignmentType": "SDG",
+      "targetName": "Sustainable Development Goal 4: Quality Education",
+      "targetUrl": "https://sdg4-elearning.vercel.app"
+    }
+  }
+  </script>
+
   <!-- Favicon -->
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
-  
+
   <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  
+
   <!-- Custom CSS -->
   <link rel="stylesheet" href="%PUBLIC_URL%/index.css" />
 </head>
