Enhanced SEO with meta tags & structured data for SDG4

--- a/public/index.html
+++ b/public/index.html
@@ -3,38 +3,58 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SDG4 eLearning | Quality Education Platform</title>
 
-  <title>SDG 4 E-Learning Platform – Quality Education for All</title>
-  <meta name="description" content="Interactive e-learning platform designed to support Sustainable Development Goal 4 (Quality Education): inclusive, equitable, and lifelong learning for all." />
-  <meta name="keywords" content="E-Learning, Online Courses, SaaS, React, Bootstrap, SDG4, Quality Education">
-  <meta name="author" content="Ojobor Jude Ikechukwu">
+  <!-- SEO -->
+  <meta name="description" content="SDG4 eLearning platform advancing UN Sustainable Development Goal 4 by providing inclusive, equitable, and quality education through digital courses." />
+  <meta name="keywords" content="SDG4, eLearning, Quality Education, UN SDGs, Online Courses, Inclusive Education, EdTech" />
+  <meta name="author" content="Ojobor Jude Ikechukwu" />
 
-  <!-- Open Graph for social sharing -->
-  <meta property="og:title" content="SDG 4 E-Learning Platform" />
-  <meta property="og:description" content="Interactive platform supporting UN Sustainable Development Goal 4: Quality Education for all learners, everywhere." />
-  <meta property="og:image" content="https://sdg4-elearning.vercel.app/assets/images/dhc_official_logo.jpg" />
-  <meta property="og:url" content="https://sdg4-elearning.vercel.app" />
+  <!-- Open Graph (Facebook, LinkedIn) -->
+  <meta property="og:title" content="SDG4 eLearning Platform" />
+  <meta property="og:description" content="Empowering learners worldwide with digital education aligned with Sustainable Development Goal 4." />
+  <meta property="og:image" content="/logo.png" />
+  <meta property="og:url" content="https://sdg4-elearning.vercel.app/" />
   <meta property="og:type" content="website" />
 
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="SDG4 eLearning Platform" />
+  <meta name="twitter:description" content="Free and accessible education aligned with UN SDG4." />
+  <meta name="twitter:image" content="/logo.png" />
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
 
   <!-- JSON-LD Structured Data -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "WebSite",
-    "name": "SDG 4 E-Learning Platform",
-    "url": "https://sdg4-elearning.vercel.app",
-    "description": "E-Learning platform designed around Sustainable Development Goal 4: ensuring inclusive and equitable quality education for all and promoting lifelong learning opportunities.",
-    "educationalAlignment": {
-      "@type": "AlignmentObject",
-      "alignmentType": "SDG",
-      "targetName": "Sustainable Development Goal 4: Quality Education",
-      "targetUrl": "https://sdg4-elearning.vercel.app"
-    }
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "EducationalOrganization",
+  "name": "SDG 4 E-Learning Platform",
+  "url": "https://sdg4-elearning.vercel.app/",
+  "logo": "https://sdg4-elearning.vercel.app/logo.png",
+  "sameAs": [
+    "https://www.linkedin.com/in/ojobor-jude-ik-292b9612b/",
+    "https://twitter.com/"
+  ],
+  "description": "An innovative e-learning platform built to support United Nations Sustainable Development Goal 4 (Quality Education), offering inclusive, equitable, and accessible learning opportunities worldwide.",
+  "founder": {
+    "@type": "Person",
+    "name": "Ojobor Jude Ikechukwu",
+    "url": "https://www.linkedin.com/in/ojobor-jude-ik-292b9612b/"
+  },
+  "educationalAlignment": {
+    "@type": "AlignmentObject",
+    "alignmentType": "Sustainable Development Goal",
+    "targetName": "SDG 4: Quality Education",
+    "targetUrl": "https://sdgs.un.org/goals/goal4"
+  },
+  "address": {
+    "@type": "PostalAddress",
+    "addressCountry": "NG"
   }
-  </script>
+}
+</script>
 
   <!-- Favicon -->
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" type="image/x-icon">
